Improves and fixes

--- a/app/src/main/res/values-ar/about.xml
+++ b/app/src/main/res/values-ar/about.xml
@@ -26,11 +26,11 @@
         بشكل مشفر.
         </p>
         <p>لا يتم جمع أي بيانات شخصية أخرى بواسطة التطبيق.</p>
-        <p>إذا كنتم تستخدمون وظيفة التبادل (اختياريًا)، يقوم monerujo بجلب سعر التبادل من خلال واجهة برمجة التطبيقات (API) العامة لـ coinmarketcap.com.
+        <p>إذا كنتم تستخدمون وظيفة التبادل (اختياريًا)، يقوم مونيروجو بجلب سعر التبادل من خلال واجهة برمجة التطبيقات (API) العامة لـ coinmarketcap.com.
         انظروا إلى سياسة خصوصيتهم على https://coinmarketcap.com/privacy لمزيد من التفاصيل حول كيفية جمع البيانات في طلباتكم.
         </p>
         <p>إذا كنتم تستخدمون التطبيق لدفع الأموال إلى عناوين BTC، فستقومون باستخدام خدمة SideShift.ai.
-        انظروا إلى سياسة خصوصيتهم على https://sideshift.ai/ للحصول على التفاصيل. يقوم Monerujo بإرسال عنوان ومبلغ الوجهة BTC إليهم. يمكن جمع عنوان IP الخاص بكم أيضًا.
+        انظروا إلى سياسة خصوصيتهم على https://sideshift.ai/ للحصول على التفاصيل. يقوم مونيروجو بإرسال عنوان ومبلغ الوجهة BTC إليهم. يمكن جمع عنوان IP الخاص بكم أيضًا.
         </p>
         <h2>أذونات التطبيق</h2>
         <ul>
