--- a/app/src/main/res/values-ar/help.xml
+++ b/app/src/main/res/values-ar/help.xml
@@ -2,7 +2,7 @@
 <resources tools:locale="ar" xmlns:tools="http://schemas.android.com/tools">
   <string name="help_create_new"><![CDATA[
 <h1> إنشاء محفظة - جديده </h1>
- <p> إذا كنت بحاجة إلى عنوان Monero جديد! </p>
+ <p> إذا كنت بحاجة إلى عنوان مونيرو جديد! </p>
  <p> أدخل اسم المحفظة وكلمة المرور.
  يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز. استخدم كلمة مرور قوية -
  ومن الأفضل استخدام عبارة المرور. </p>
@@ -21,7 +21,7 @@
 ]]></string>
   <string name="help_create_seed"><![CDATA[
 <h1> إنشاء محفظة - بذرة </h1>
- <p> إذا كان لديك بالفعل عنوان Monero وتريد استرداد المعاملات من blockchain! </p>
+ <p> إذا كان لديك بالفعل عنوان مونيرو وتريد استرداد المعاملات من blockchain! </p>
  <p> أدخل اسم المحفظة وكلمة المرور. يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز.
  استخدم كلمة مرور قوية - ومن الأفضل استخدام عبارة مرور. </p>
  <p> أدخل البذرة الخاصة بك في الحقل \"بذرة الذاكرة\". <p>
@@ -44,7 +44,7 @@
  <p> إذا كنت تستعيد محفظتك باستخدام مفاتيحك! </p>
  <p> أدخل اسم المحفظة وكلمة المرور. يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز.
  استخدم كلمة مرور قوية - ومن الأفضل استخدام عبارة مرور. <p>
- <p> أدخل عنوان العام Monero الخاص بك في حقل \"العنوان العام\" واملأ \"مفتاح العرض\" و\"مفتاح الإنفاق\". </p>
+ <p> أدخل عنوان العام مونيرو الخاص بك في حقل \"العنوان العام\" واملأ \"مفتاح العرض\" و\"مفتاح الإنفاق\". </p>
  <p> أدخل رقم الكتلة للمعاملة الأولى المستخدمة لهذا العنوان في
  حقل \"استعادة الارتفاع\". يمكنك أيضًا استخدام تاريخ بالتنسيق YYYY-MM-DD. إذا لم تكن متأكدا،
  أدخل تاريخًا/ارتفاعًا للكتلة تقريبيًا <em>قبل</em> انشأء المحفظة. </p>
@@ -54,7 +54,7 @@
  <p> إذا كنت تريد فقط مراقبة المعاملات الواردة إلى المحفظة! </p>
  <p> أدخل اسم المحفظة وكلمة المرور. يتم استخدام كلمة المرور لتأمين بيانات محفظتك على الجهاز.
  استخدم كلمة مرور قوية - ومن الأفضل استخدام عبارة مرور. <p>
- <p> أدخل عنوان العام Monero الخاص بك في حقل \"العنوان العام\" واملأ \"مفتاح العرض\". </p>
+ <p> أدخل عنوان العام مونيرو الخاص بك في حقل \"العنوان العام\" واملأ \"مفتاح العرض\". </p>
  <p> أدخل رقم الكتلة للمعاملة الأولى المستخدمة لهذا العنوان في
  حقل \"استعادة الارتفاع\". يمكنك أيضًا استخدام تاريخ بالتنسيق YYYY-MM-DD. إذا لم تكن متأكدا،
  أدخل تاريخًا/ارتفاعًا للكتلة تقريبيًا <em>قبل</em> انشأء المحفظة. </p>
@@ -62,9 +62,9 @@
   <string name="help_details"><![CDATA[
 <h1> تفاصيل المحفظة </h1>
  <h2> عنوان المحفظة العام </h2>
- يمكنك التعامل مع عنوانك العام كما تتعامل مع رقم حسابك البنكي، يمكنك مشاركته مع الآخرين دون الخوف من فقدان Monero الخاص بك. يمكن للأشخاص بإرسال Monero إلى محفظتك باستخدام هذا العنوان.
+ يمكنك التعامل مع عنوانك العام كما تتعامل مع رقم حسابك البنكي، يمكنك مشاركته مع الآخرين دون الخوف من فقدان مونيرو الخاص بك. يمكن للأشخاص بإرسال مونيرو إلى محفظتك باستخدام هذا العنوان.
  <h2> بذرة الذاكرة </h2>
- هذه البذرة هي الوحيدة التي تحتاجها لاستعادة محفظتك في المستقبل والوصول الكامل إلى أموالك. من الضروري الحفاظ على خصوصية وأمان هذه البذرة، حيث يمكن لـ <em> أي شخص </em> الوصول الكامل إلى Monero الخاص بك! إن لم تسجل هذه البذرة في مكان آمن، يرجى القيام بذلك الآن!
+ هذه البذرة هي الوحيدة التي تحتاجها لاستعادة محفظتك في المستقبل والوصول الكامل إلى أموالك. من الضروري الحفاظ على خصوصية وأمان هذه البذرة، حيث يمكن لـ <em> أي شخص </em> الوصول الكامل إلى مونيرو الخاص بك! إن لم تسجل هذه البذرة في مكان آمن، يرجى القيام بذلك الآن!
  <h2> كلمة مرور استعادة ملفات المحفظة </h2>
  تأكد من تدوين كلمة المرور هذه. إذا قمت بإعادة تعيين جهازك أو إزالة التطبيق، ستحتاج إلى هذه الكلمة للوصول إلى محفظتك مرة أخرى. <br/>
  <h3> كريزي باس (CrAzYpass) </h3>
@@ -74,40 +74,40 @@
  <h3> كلمة المرور القديمة </h3>
  إذا رأيت عبارة المرور الخاصة بك هنا، فإن ملفات محفظتك ليست آمنة كما هو الحال عند استخدام كريزي باس (CrAzYpass). لحل هذه المشكلة، اختر ببساطة \"تغيير عبارة المرور\" من القائمة. بعد إدخال عبارة مرور جديدة (ربما تكون نفس العبارة السابقة)، سيقوم التطبيق بإنشاء CrAzYpass لك وتأمين ملفات محفظتك بها. تذكر أن تدونها!
  <h3> محافظ CrAzYpass </h3>
- إذا كنت بحاجة إلى إعادة تثبيت Monerujo في المستقبل (على سبيل المثال بعد إعادة تعيين هاتفك أو الانتقال إلى جهاز جديد) أو إذا كنت ترغب في استخدام ملفات محفظتك على جهاز آخر أو كمبيوتر، ستحتاج إلى استخدام كلمة المرور هذه للوصول إلى محفظتك مرة أخرى. <br/>
+ إذا كنت بحاجة إلى إعادة تثبيت مونيروجو في المستقبل (على سبيل المثال بعد إعادة تعيين هاتفك أو الانتقال إلى جهاز جديد) أو إذا كنت ترغب في استخدام ملفات محفظتك على جهاز آخر أو كمبيوتر، ستحتاج إلى استخدام كلمة المرور هذه للوصول إلى محفظتك مرة أخرى. <br/>
  عن طريق اختيار \"تغيير عبارة المرور\" من القائمة، يمكنك اختيار عبارة مرور أخرى. لكن احذر، هذا سيولد كلمة مرور استرداد جديدة. تذكر أن تدونها!
  <h2> مفتاح العرض </h2>
  يمكن استخدام مفتاح العرض الخاص بك لمراقبة المعاملات الواردة إلى محفظتك دون الحاجة إلى إعطاء الإذن لإنفاق الأموال الموجودة في محفظتك.
  <h2> مفتاح الإنفاق </h2>
- مفتاح الإنفاق الخاص بك يتيح لأي شخص إنفاق Monero المرتبطة بمحفظتك، لذا لا تشارك هذا المفتاح مع أي شخص، واحتفظ به في مكان آمن مثل بذرة الذاكرة الخاصة بك.
+ مفتاح الإنفاق الخاص بك يتيح لأي شخص إنفاق مونيرو المرتبطة بمحفظتك، لذا لا تشارك هذا المفتاح مع أي شخص، واحتفظ به في مكان آمن مثل بذرة الذاكرة الخاصة بك.
 ]]></string>
   <string name="help_list"><![CDATA[
 <h1> قائمة المحافظ </h1>
  <h2> العقدة </h2>
- <p> Monerujo يتواصل مع شبكة Monero عبر عقدة بعيدة، مما يغني عن الحاجة لتنزيل وتخزين نسخة كاملة من البلوكتشين. يمكنك العثور على قائمة بالعقد البعيدة الشائعة أو معرفة كيفية تشغيل عقدتك البعيدة الخاصة هنا https://moneroworld.com/ <p>
- <p> Monerujo يحتوي على بعض العقد البعيدة المعدة مسبقا. ويتذكر الخمس عقد الأخيرة التي تم استخدامها. </p>
+ <p> مونيروجو يتواصل مع شبكة مونيرو عبر عقدة بعيدة، مما يغني عن الحاجة لتنزيل وتخزين نسخة كاملة من البلوكتشين. يمكنك العثور على قائمة بالعقد البعيدة الشائعة أو معرفة كيفية تشغيل عقدتك البعيدة الخاصة هنا https://moneroworld.com/ <p>
+ <p> مونيروجو يحتوي على بعض العقد البعيدة المعدة مسبقا. ويتذكر الخمس عقد الأخيرة التي تم استخدامها. </p>
  <h2> المحافظ </h2>
- <p> هنا يمكنك رؤية محافظك. توجد في المجلد <tt> monerujo </tt> في التخزين الداخلي لجهازك. يمكنك استخدام تطبيق لاستكشاف الملفات لرؤيتها. قم بإنشاء نسخ احتياطية من هذا المجلد بشكل دوري للتخزين خارج الجهاز في حالة تعرض جهازك للتلف أو السرقة. </p>
+ <p> هنا يمكنك رؤية محافظك. توجد في المجلد <tt> مونيروجو </tt> في التخزين الداخلي لجهازك. يمكنك استخدام تطبيق لاستكشاف الملفات لرؤيتها. قم بإنشاء نسخ احتياطية من هذا المجلد بشكل دوري للتخزين خارج الجهاز في حالة تعرض جهازك للتلف أو السرقة. </p>
  <p> اختر محفظة لفتحها أو اضغط على \"+\" لإنشاء محفظة جديدة. أو اختر واحدة من عمليات المحفظة: </p>
  <h3> التفاصيل </h3>
  <p> عرض تفاصيل المحفظة، البذور والمفاتيح. </p>
  <h3> استلام </h3>
- <p> إنشاء رمز QR لتلقي Moneroj. </p>
+ <p> إنشاء رمز QR لتلقي مونيروجو. </p>
  <h3> إعادة التسمية </h3>
  <p> تغيير اسم المحفظة. النسخ الاحتياطية لا يتم تغيير أسمائها. </p>
  <h3> النسخ الاحتياطي </h3>
- <p> إنشاء نسخة من المحفظة في مجلد <tt> النسخ الاحتياطية </tt> داخل <tt> monerujo </tt>، مع استبدال النسخ السابقة الموجودة هناك. </p>
+ <p> إنشاء نسخة من المحفظة في مجلد <tt> النسخ الاحتياطية </tt> داخل <tt> مونيروجو </tt>، مع استبدال النسخ السابقة الموجودة هناك. </p>
  <h3> الأرشيف </h3>
  <p> إنشاء نسخة احتياطية وحذف المحفظة بعد ذلك. النسخة تبقى في مجلد <tt> النسخ الاحتياطية </tt>. إذا لم تعد بحاجة إلى النسخ الاحتياطية، يجب عليك حذفها باستخدام تطبيق لاستكشاف الملفات أو تطبيق حذف أمن. </p>
 ]]></string>
   <string name="help_tx_details"><![CDATA[
 <h1> تفاصيل العملية </h1>
  <h2> الوجهة </h2>
- العنوان العام للمحفظة التي سيتم إرسال Monero إليها
+ العنوان العام للمحفظة التي سيتم إرسال مونيرو إليها
  <h2> هوية الدفع (ID) </h2>
- يمكنك استعمال هوية الدفع للتأكد من إرسال Monero بين طرفين، هذا اختياري تماما وخاص. على سبيل المثال، يمكن أن يتيح للشركة مطابقة العملية التي قمت بها مع السلعة التي اشتريتها.
+ يمكنك استعمال هوية الدفع للتأكد من إرسال مونيرو بين طرفين، هذا اختياري تماما وخاص. على سبيل المثال، يمكن أن يتيح للشركة مطابقة العملية التي قمت بها مع السلعة التي اشتريتها.
  <h2> هوية TX </h2>
- هذا هو هوية العملية الخاصة بك، يمكنك استعمالها لتحديد عمليتك المشفرة على مستكشف سلسلة الكتل لـ Monero مثل <a href=\"https://xmrchain.net/\"> https://xmrchain.net/ </a>
+ هذا هو هوية العملية الخاصة بك، يمكنك استعمالها لتحديد عمليتك المشفرة على مستكشف سلسلة الكتل لـ مونيرو مثل <a href=\"https://xmrchain.net/\"> https://xmrchain.net/ </a>
  <h2> مفتاح TX (مفتاح العملية) </h2>
  هذا هو مفتاح العملية الخاص بك، احتفظ به في مكان آمن لأن الكشف عنه لطرف ثالث يكشف عن التوقيع الخاص بك في الدائرة، مما يجعل العملية شفافة.
  <h2> الكتلة </h2>
@@ -126,9 +126,9 @@
  </u>
  </p>
  <h2> تحويل XMR </h2>
- <p> تتم معالجة التحويل إلى عملة مشفرة أخرى من خلال خدمة تبادل خارجية. لا يعمل Monerujo مع مزودوا الخدمه أو يرتبط بها، وبالتالي لا يمكنه مساعدتك في خدمتهم، ولكنه سيزودك بالمعلومات المطلوبة للحصول على الدعم منهم. </p>
+ <p> تتم معالجة التحويل إلى عملة مشفرة أخرى من خلال خدمة تبادل خارجية. لا يعمل مونيروجو مع مزودوا الخدمه أو يرتبط بها، وبالتالي لا يمكنه مساعدتك في خدمتهم، ولكنه سيزودك بالمعلومات المطلوبة للحصول على الدعم منهم. </p>
  <h2> تبادل XMR المتوفرة </h2>
- <p> يدعم Monerujo تحويل XMR إلى العملات مشفرة التالية:
+ <p> يدعم مونيروجو تحويل XMR إلى العملات مشفرة التالية:
  <ul>
  <li> بيتكوين (BTC) </li>
  <li> إيثريوم (ETH) </li>
@@ -142,7 +142,7 @@
   <string name="help_xmrto"><![CDATA[
 <h1> تحويل XMR </h1>
  <h2> المبالغ <h2>
- <p> قم بإدخال القيمة التي ترغب في إرسالها من العملة المشفرة في حقل \"المبلغ\". سيظهر لك بشكل افتراضي القيمة المكافئة من XMR التي سترسل من محفظتك. يمكنك اختيار عملة أخرى من القائمة المنسدلة إذا كنت ترغب في تحديد القيمة بتلك العملة. يستخدم Monerujo سعرًا ثابتًا، لذا يجب أن تحصل على القيمة الدقيقة التي حددتها هنا في نهاية العملية. </p>
+ <p> قم بإدخال القيمة التي ترغب في إرسالها من العملة المشفرة في حقل \"المبلغ\". سيظهر لك بشكل افتراضي القيمة المكافئة من XMR التي سترسل من محفظتك. يمكنك اختيار عملة أخرى من القائمة المنسدلة إذا كنت ترغب في تحديد القيمة بتلك العملة. يستخدم مونيروجو سعرًا ثابتًا، لذا يجب أن تحصل على القيمة الدقيقة التي حددتها هنا في نهاية العملية. </p>
  <h2> سعر التبادل </h2>
  <p> سترى أدناه السعر الحالي الذي يقدمه السوق، بالإضافة إلى الحد الأدنى والأقصى له. يرجى ملاحظة أن هذا السعر ليس مضمونًا في هذه المرحلة، وسيتم تحديده عندما تكون معاملتك جاهزة للموافقة في الشاشة التالية. </p>
 ]]></string>
@@ -150,7 +150,7 @@
 <h1> طلب تبادل عملات <h1>
  <p> سترى في هذه الشاشة طلب التبادل الفعلي. هذا الأمر ساري لمدة محدودة - قد ترى عد تنازلي على زر \"الإنفاق\". قد يختلف سعر التحويل عن الذي ظهر في الشاشات السابقة، ولكنه سيثبت طالما قمت بالموافقة قبل انتهاء الوقت. </p>
  <h2> رقم الطلب <h2>
- <p> بما أن Monerujo يتعامل فقط مع جانب XMR من المعاملة، يمكن استخدام <em> رقم الطلب </em> الخاص بك لتتبع الطلب أو الحصول على الدعم من موقع البورصة (خادم التبادل). </p>
+ <p> بما أن مونيروجو يتعامل فقط مع جانب XMR من المعاملة، يمكن استخدام <em> رقم الطلب </em> الخاص بك لتتبع الطلب أو الحصول على الدعم من موقع البورصة (خادم التبادل). </p>
  <h2> انتهاء العد التنازلي </h2>
  <p> عندما يصل العد التنازلي إلى الصفر، يجب عليك الحصول على عرض سعر جديد من البورصة عن طريق العودة إلى الشاشة السابقة، ثم العودة إلى هذه الشاشة. </p>
 ]]></string>
@@ -160,17 +160,17 @@
  <p> يمكن تفعيل/تعطيل وضع الشارع من القائمة أو من خلال أيقونة رأس Gunther. في هذا الوضع، لن يظهر رصيدك
  على أي شاشة، مما يتيح لك استخدام المحفظة بأمان في الشارع، أو البار، أو
  أي مكان عام آخر. المعاملات السابقة ستكون مخفية أيضًا. ستظهر المعاملات الجديدة، لذا
- يمكنك التأكد من أنك قد أرسلت/تلقيت Monero! </p>
+ يمكنك التأكد من أنك قد أرسلت/تلقيت مونيرو! </p>
  <h2> الفحص </h2>
- بما أن Monero تفضل الخصوصية، في كل مرة تفتح فيها حافظة Monerujo، يجب علينا
- فحص البلوكشين لمعرفة ما إذا كانت هناك أي Monero جديدة تم إرسالها إلى حافظتك،
+ بما أن مونيرو تفضل الخصوصية، في كل مرة تفتح فيها حافظة مونيروجو، يجب علينا
+ فحص البلوكشين لمعرفة ما إذا كانت هناك أي مونيرو جديدة تم إرسالها إلى حافظتك،
 تخزن معلومات محفظتك على هاتفك فقط لذا قد يستغرق الأمر بعض الوقت
  إذا لم تقم بالمزامنة لفترة طويلة.
  <h2> الرصيد </h2>
  <p> <b> لا تقلق يا صديقي! رصيد محفظتي اختفى أو لم يتم تأكيده! </b> <br/>
  لا تقلق! عندما ترسل أموالًا من محفظتك، قد يظهر جزء من رصيدك مؤقتًا
  كغير مؤكد.
- هذا يحدث بسبب طريقة تبادل Monero على البلوكشين وكيفية عمل الفكة.
+ هذا يحدث بسبب طريقة تبادل مونيرو على البلوكشين وكيفية عمل الفكة.
  يمكنك قراءة المزيد حول الفكة على https://getmonero.org/resources/moneropedia/change.html
  <h2> قائمة المعاملات </h2>
  <p> قائمة بمعاملات المحفظة. في قائمة المحافظ، يتم عرض المعاملات الواردة فقط. </p>
@@ -178,14 +178,14 @@
   <string name="help_node"><![CDATA[
 <h1> العقد </h1>
  <h2>طويل اوي مش هقرأ  </h2>
- <p> قم بتحديث قائمة العقد عن طريق سحب للأسفل و سجل إشارة مرجعية 3-5 عقد للسماح Monerujo
+ <p> قم بتحديث قائمة العقد عن طريق سحب للأسفل و سجل إشارة مرجعية 3-5 عقد للسماح مونيروجو
  بالاختيار الأفضل بالنسبة لك! </p>
  <h2>ما هي العقدة؟ </h2>
- <p> يستخدم Monerujo عقدة من بعد (تسمى أحيانًا Daemon) للتواصل مع
- شبكة Monero دون الحاجة إلى تنزيل نسخة كامله من ال
+ <p> يستخدم مونيروجو عقدة من بعد (تسمى أحيانًا Daemon) للتواصل مع
+ شبكة مونيرو دون الحاجة إلى تنزيل نسخة كامله من ال
  blockchain. <p>
  <h2> قائمة العقد </h2>
- <p> إذا كانت القائمة فارغة، فيمكنك إما إضافة عقد جديدة يدويًا أو السماح لـ Monerujo
+ <p> إذا كانت القائمة فارغة، فيمكنك إما إضافة عقد جديدة يدويًا أو السماح لـ مونيروجو
  مسح الشبكة بالنسبة لك. او كلاهما. واصل القراءة… </p>
  <p> تعرض قائمة العقد جميع العقد المعروفة حاليًا. بالإضافة إلى ذلك، الطابع الزمني
  يتم عرض أحدث كتلة معروفة لكل عقدة تحت اسم العقدة. ايقونة
@@ -194,9 +194,9 @@
  بجوار كل عقدة. </p>
  <p> يمكن وضع إشارة مرجعية على أي عقدة في القائمة لاستخدامها لاحقًا.
  سيتم نسيان العقد التي لم يتم وضع إشارة مرجعية عليها. <p>
- <p> سيختار Monerujo العقدة المرجعية المثالية في كل مرة تستخدمها.
+ <p> سيختار مونيروجو العقدة المرجعية المثالية في كل مرة تستخدمها.
  يتم ذلك عن طريق التحقق من ارتفاع الكتلة (مدى تحديثها) بالإضافة إلى سلوك الاستجابة (مدى سرعة استجابة العقدة للطلبات). </p>
- <p> يتم فرز القائمة حسب هذه الخصائص، وبالتالي فإن العقدة العليا ستكون اختيار Monerujo
+ <p> يتم فرز القائمة حسب هذه الخصائص، وبالتالي فإن العقدة العليا ستكون اختيار مونيروجو
  الآن. الجزء السفلي من القائمة هي العقد البطيئة جدًا أو غير المتوفرة. </p>
  <h2> أضف عقدة </h2>
  <p> عن طريق لمس \" إضافة عقدة \" الزر الموجود في الأسفل، سيُطلب منك
@@ -209,21 +209,21 @@
  و \" نتائج الاختبار \" سيعرض ارتفاع الكتلة ووقت الاستجابة وعنوان IP الفعلي المستخدم.
  قد تكون النتيجة أيضًا خطأ - عادةً لأن اسم المضيف
  لا يمكن الوصول إليه خلال فترة زمنية معقولة أو أن بيانات المصادقة غير صحيحة.
- أو أن مجموعة اسم المضيف/المنفذ لا تشير إلى عقدة Monero فعلية!
+ أو أن مجموعة اسم المضيف/المنفذ لا تشير إلى عقدة مونيرو فعلية!
  بمجرد اجتياز الاختبار (بدون خطأ) - أضغط على \" موافق \" لحفظ و
  ضع إشارة مرجعية على هذه العقدة. </p>
  <h2> البحث عن العقد </h2>
- <p> بالإضافة إلى ذلك، يمكنك فحص الشبكة بحثًا عن العقد. سيبدأ Monerujo
+ <p> بالإضافة إلى ذلك، يمكنك فحص الشبكة بحثًا عن العقد. سيبدأ مونيروجو
  مسح الشبكة بحثًا عن العقد البعيدة على المنفذ 18089. ويبدأ ذلك بسؤال
- العقد المرجعية عن أقرانهم الآخرين في شبكة Monero P2P ثم يستمر
+ العقد المرجعية عن أقرانهم الآخرين في شبكة مونيرو P2P ثم يستمر
  بسؤال هؤلاء عن أقرانهم ايضا، وما إلى ذلك. إذا لم يكن لديك عقد مرجعية
  (أو لا يوجد أقران)،
- سوف ينتقل Monerujo مباشرة إلى عقده Monero الأولية المشفرة في Monero.
+ سوف ينتقل مونيروجو مباشرة إلى عقده مونيرو الأولية المشفرة في مونيرو.
  يتوقف الفحص عندما يجد إجمالي 10 عقد. </p>
 ]]></string>
   <string name="help_uri"><![CDATA[
 <h1> كيفية استخدام رابط الدفع </h1>
- <p> لقد قمت بتشغيل رابط الدفع باستخدام Monerujo. لإجراء عملية الإرسال، يرجى اتباع الخطوات التالية: </p>
+ <p> لقد قمت بتشغيل رابط الدفع باستخدام مونيروجو. لإجراء عملية الإرسال، يرجى اتباع الخطوات التالية: </p>
  <p>
  1. قم بفتح المحفظة التي تود الدفع منها <br>
  2. انتظر حتى يتم مزامنة المحفظة وظهور زر \"إرسال\" <br>
@@ -239,15 +239,15 @@
  <p> تور، المعروف أيضاً بـ The Onion Router، هو برنامج مجاني ومفتوح المصدر يتيح التواصل المجهول. </p>
  <p> عند تفعيل تور، سيتم توجيه اتصالك عبر عدة مراحل وسيتم إخفاء عنوان IP الخاص بك
  عن العقدة. يجب أن تعلم أن هذا الأسلوب أكثر خصوصية ولكنه <b> أبطأ </b> . </p>
- <p> لاستخدام تور مع Monerujo، ستحتاج إلى تثبيت Orbot على هاتفك. بمجرد
+ <p> لاستخدام تور مع مونيروجو، ستحتاج إلى تثبيت Orbot على هاتفك. بمجرد
  تثبيت Orbot، يجب عليك تفعيله بالنقر على أيقونة الشبكة في قائمة المحفظة
  الشاشة. </p>
- <p> إذا واجهت مشكلات في الاتصال بـ Tor، جرب الحصول على هوية جديدة في تطبيق Orbot (الأيقونة
+ <p> إذا واجهت مشكلات في الاتصال بـ تور، جرب الحصول على هوية جديدة في تطبيق Orbot (الأيقونة
  في الجزء العلوي الأيمن). </p>
 ]]></string>
   <string name="help_tor_enable"><![CDATA[
-<h1> عقدة Tor </h1>
- <p> هذه عقدة من نوع .onion. لكي تستخدمها، يجب عليك تفعيل وضع Tor بالضغط على
+<h1> عقدة تور </h1>
+ <p> هذه عقدة من نوع .onion. لكي تستخدمها، يجب عليك تفعيل وضع تور بالضغط على
  الأيقونة <img src=\"ic_network_clearnet\"/> الموجودة بالقرب من أعلى صفحة قائمة المحافظ. </p>
 ]]></string>
 </resources>
