--- a/app/src/main/res/menu/wallet_menu.xml
+++ b/app/src/main/res/menu/wallet_menu.xml
@@ -54,4 +54,9 @@
         android:title="@string/pocketchange_title"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_background_sync"
+        android:orderInCategory="900"
+        android:title="@string/background_sync"
+        app:showAsAction="never" />
 </menu>
