--- a/app/src/main/res/values-ar/help.xml
+++ b/app/src/main/res/values-ar/help.xml
@@ -117,7 +117,7 @@
 <h1> أرسل </h1>
  <h2> عنوان المستلم </h2>
  <p> عنوان العام للمحفظة التي ترسل إليها، يمكنك لصقه من
- الحافظة، أو قم بمسح رمز الاستجابة السريعة ضوئيًا أو أدخله يدويًا. تأكد من التحقق من ذلك ثلاث مرات
+ الحافظة، أو قم بمسح رمز QR أو أدخله يدويًا. تأكد من التحقق من ذلك ثلاث مرات
  تأكد من أنك لا ترسل العملات المشفرة إلى عنوان خاطئ، فبمجرد إرسالها لا يمكن التراجع عنها (عليك العوض). </p>
  <p> بالإضافة إلى استخدام عنوان XMR، يمكنك أيضًا استخدام
  <ul>
@@ -162,8 +162,8 @@
  أي مكان عام آخر. المعاملات السابقة ستكون مخفية أيضًا. ستظهر المعاملات الجديدة، لذا
  يمكنك التأكد من أنك قد أرسلت/تلقيت مونيرو! </p>
  <h2> الفحص </h2>
- بما أن مونيرو تفضل الخصوصية، في كل مرة تفتح فيها حافظة مونيروجو، يجب علينا
- فحص البلوكشين لمعرفة ما إذا كانت هناك أي مونيرو جديدة تم إرسالها إلى حافظتك،
+ بما أن مونيرو تفضل الخصوصية، في كل مرة تفتح فيها محفظة مونيروجو، يجب علينا
+ فحص البلوكشين لمعرفة ما إذا كانت هناك أي مونيرو جديدة تم إرسالها إلى محفظتك،
 تخزن معلومات محفظتك على هاتفك فقط لذا قد يستغرق الأمر بعض الوقت
  إذا لم تقم بالمزامنة لفترة طويلة.
  <h2> الرصيد </h2>
