--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -20,6 +20,10 @@
             app:key="@string/preferred_theme"
             app:title="@string/setting_theme"
             app:useSimpleSummaryProvider="true" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="@string/preferred_lock"
+            android:title="@string/setting_lock" />
     </PreferenceCategory>
     <PreferenceCategory app:title="@string/title_info">
         <Preference
