--- a/app/src/main/res/values-et/help.xml
+++ b/app/src/main/res/values-et/help.xml
@@ -138,145 +138,6 @@
         <h2>Makse ID</h2>
         You can use a Payment ID to identify the reason you sent Monero between two parties this is
         fully optional and private. For example it can allow a Business to reconcile your transaction
-        with an item you bought.
-        <h2>Ülekande ID (TX ID)</h2>
-        This is your Transaction ID you can use it to identify your obfuscated transaction on a Monero
-        Blockchain explorer like <a href="https://xmrchain.net/">https://xmrchain.net/</a>
-        <h2>Ülekande võti (TX KEY)</h2>
-        This is your transaction private key, keep this safe as revealing this to a third party
-        reveals which signature in a ring is yours, thereby making your transaction transparent.
-        <h2>Plokk</h2>
-        This was the block your transaction was included in.
-    ]]></string>
-
-    <string name="help_send"><![CDATA[
-        <h1>Saatmine</h1>
-        <h2>Saaja aadress</h2>
-        <p>This is the public address of the wallet you are sending Moneroj to, you can copy this from
-        your clipboard, scan a QR code or enter it manually. Make sure you triple check this to
-        ensure you aren’t sending coins to the wrong address.</p>
-        <p>In addition to using an XMR address, you can also use
-        <ul>
-            <li>an OpenAlias for XMR or BTC</li>
-            <li>a BTC address</li>
-        </u>
-        Please note, that sending BTC is processed through the Exolix service (see https://exolix.com
-        for details). See the section on sending BTC below.</p>
-        <h1>Bitcoini (BTC) saatmine</h1>
-        <h2>Exolix</h2>
-        <p>Exolix is a third party service which acts as an exchange from Monero to Bitcoin.
-        We use the Exolix API to integrate Bitcoin payments into Monerujo. Please check out
-        https://exolix.com and decide for yourself if this is something you want to use. The Monerujo
-        Team is not associated with Exolix and cannot help you with their service.</p>
-        <h2>Exolix vahetuskurss<h2>
-        <p>On the \"Amount\" screen you will be shown the current parameters of the Exolix service. These
-        include the current exchange rate as well as upper and lower BTC limits. Note that this
-        rate is not guaranteed at this point.</p>
-        <h2>Exolix tellimus<h2>
-        <p>On the \"Confirm\" screen, you will see the actual Exolix order. This order is valid for
-        a limited time - you may notice a countdown on the \"Spend\" button. The exchange rate may
-        be different to the indicative one shown on previous screens.</p>
-        <h2>Exolix privaatvõti<h2>
-        <p>Since Monerujo only handles the Monero part of your transaction your Exolix secret key
-        can be used to track the Bitcoin part of your order on the Exolix homepage.</p>
-        <h2>Exolix loendur</h2>
-        <p>Once the countdown reaches zero, you need to get a new quote from Exolix by going back to the
-        previous step and then coming back to the \"Confirm\" screen.</p>
-    ]]></string>
-
-    <string name="help_xmrto"><![CDATA[
-        <h1>Bitcoini (BTC) saatmine</h1>
-        <h2>Exolix</h2>
-        <p>Exolix is a third party service which acts as an exchange from Monero to Bitcoin.
-        We use the Exolix API to integrate Bitcoin payments into Monerujo. Please check out
-        https://exolix.com and decide for yourself if this is something you want to use. The Monerujo
-        Team is not associated with Exolix and cannot help you with their service.</p>
-        <h2>Exolix vahetuskurss<h2>
-        <p>On the \"Amount\" screen you will be shown the current parameters of the Exolix service. These
-        include the current exchange rate as well as upper and lower BTC limits. Note that this
-        rate is not guaranteed at this point.</p>
-        <h2>Exolix tellimus<h2>
-        <p>On the \"Confirm\" screen, you will see the actual Exolix order. This order is valid for
-        a limited time - you may notice a countdown on the \"Spend\" button. The exchange rate may
-        be different to the indicative one shown on previous screens.</p>
-        <h2>Exolix privaatvõti<h2>
-        <p>Since Monerujo only handles the Monero part of your transaction your Exolix secret key
-        can be used to track the Bitcoin part of your order on the Exolix homepage.</p>
-        <h2>Exolix loendur</h2>
-        <p>Once the countdown reaches zero, you need to get a new quote from Exolix by going back to the
-        previous step and then coming back to the \"Confirm\" screen.</p>
-    ]]></string>
-
-    <string name="help_wallet"><![CDATA[
-        <h1>Rahakott</h1>
-        <h2>Avalik režiim</h2>
-        <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
-        balance is not shown on any screen so you can safely use your wallet on the street, a pub or
-        other public place. Previous transactions are also hidden. New transactions will be shown, so
-        you can see that you have sent/received sweet Moneroj!</p>
-        <h2>Uuendamine</h2>
-        Because Monero likes to keep things private, every time you open a Monerujo wallet we have to
-        scan the blockchain to see if any new Moneroj have been sent to your wallet, this only
-        stores information to your phone which belongs to your wallet. Sometimes it can take a while
-        because you haven’t synced in a long time.
-        <h2>Kontojääk</h2>
-        <p><b>Help! My wallet balance has disappeared or is unconfirmed!</b><br/>
-        Don’t panic! When you send funds from your wallet, some of your balance will temporarily show
-        as unconfirmed.
-        This happens as a result of how Monero is exchanged on the blockchain and how change works.
-        Read more about change at https://getmonero.org/resources/moneropedia/change.html
-        <h2>Ülekannete ajalugu</h2>
-        <p>A list of the wallet transactions. In view wallets, only incoming transactions are shown.</p>
-    ]]></string>
-
-    <string name="help_node"><![CDATA[
-        <h1>Nodes</h1>
-        <h2>TL;DR</h2>
-        <p>Refresh the nodes list by pulling down &amp; bookmark 3&#8211;5 nodes to allow Monerujo
-        to choose the best one for you!</p>
-        <h2>What&apos;s a Node?</h2>
-        <p>Monerujo uses a Remote Node (sometimes also called Daemon) to communicate with
-        the Monero Network without having to download and store a copy of the
-        whole blockchain itself.<p>
-        <h2>Node List</h2>
-        <p>If the list is empty, you can either add new nodes manually or let Monerujo
-        scan the network for you. Or both. Read on&#8230;</p>
-        <p>The node list shows all currently known nodes. Additionally, the timestamp
-        of the latest block known to each node is shown under the node name. An icon
-        representing the node&apos;s response behaviour
-        (which indicates the level of connectivity to be expected)
-        is shown next to each node.</p>
-        <p>Any node in the list can be bookmarked for later use.
-        Nodes which are not bookmarked will be forgotten.<p>
-        <p>Monerujo will choose the optimal bookmarked node each time you use it.
-        It does this by checking the blockheight (how up-to-date
-        is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
-        <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
-        would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
-        Some nodes require credentials to use them. Enter the provided username &amp;
-        password in the appropriate fields. Now you can &quot;Test&quot; these setting.
-        The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
-        The result may also be an error - usually because the hostname provided is
-        not reachable in a sensible amount of time or the credentials are incorrect.
-        Or the hostname/port combination does not point to an actual Monero Node!
-        Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
-        bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
-    ]]></string>
 
     <!-- Note for translators: new/changed text also in help_send -->
 
@@ -311,39 +172,14 @@
     <string name="help_tor_enable"><![CDATA[
         <h1>Tor Node</h1>
         <p>This is an .onion node. In order to use it, you must enable Tor mode by touching the
-        <img src="ic_network_clearnet"/> icon near the top of the Wallet List page.</p>
-    ]]></string>
-
-    <string name="help_sidekick"><![CDATA[
-        <h2>Using your sidekick wallet</h2>
-        Check that both phones are connected via Bluetooth and both apps are opened.
-
-        <h3>On sidekick:</h3>
-        Open your wallet of choice.
-
-        <h3>On monerujo:</h3>
-        Connect to sidekick.
-
-        Open the wallet matching the one you have opened on the sidekick phone.
-
-        Use it as you\'d normally use any wallet. Let it scan to see incoming transactions, share addresses, or send moneros. If the app needs to do something that involves your keys, it\'ll ask for permission from sidekick.
-
-        <h3>On sidekick:</h3>
-        If monerujo requested permission, you should see a dialog that shows the transaction details like amount and fees. You\'ll also see two options, to ACCEPT or DENY it. Choose wisely.
-
-        <h3>On monerujo:</h3>
-        The transaction should be signed and ready to be sent. Press to make it so.
-         <br/>
-    ]]></string>
-
-    <string name="help_create_sidekick" translatable="false"><![CDATA[
-        <h1>Create Wallet - Sidekick</h1>
-        <p>You want to recover your wallet from your awesome Sidekick device.</p>
-        <p>Et netus et malesuada fames. Mattis enim ut tellus elementum sagittis vitae. Eget duis at
-        tellus at. Id aliquet risus feugiat in. Donec et odio pellentesque diam. Dictum fusce ut
-        placerat orci nulla. Amet nisl suscipit adipiscing bibendum est ultricies integer quis.</p>
-        <p>Enter the block number of the first transaction used for this address in the
-        field \"Restore Height\". You can also use a date in the format YYYY-MM-DD. If you are not sure,
-        enter an approximate date/blockheight <em>before</em> you first used this wallet address.</p>
+        <img src="ic_network_clearnet"/> icon near the top of the Wallet L
+        <h2>Ülekande ID (TX ID)</h2>
+        This is your Transaction ID you can use it to identify your obfuscated transaction on a Monero
+        Blockchain explorer like <a href="https://xmrchain.net/">https://xmrchain.net/</a>
+        <h2>Ülekande võti (TX KEY)</h2>
+        This is your transaction private key, keep this safe as revealing this to a third party
+        reveals which signature in a ring is yours, thereby making your transaction transparent.
+        <h2>Plokk</h2>
+        This was the block your transaction was included in.
     ]]></string>
 </resources>
