--- a/app/src/main/res/values-es/about.xml
+++ b/app/src/main/res/values-es/about.xml
@@ -7,7 +7,7 @@
         <b>Créditos</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
-        rehrar, EarlOfEgo et al.
+        rehrar, EarlOfEgo, ErCiccione et al.
         <br/><br/>
         <a href="https://monerujo.io/">monerujo.io</a>
         ]]></string>
