--- a/app/src/main/res/values-nb/about.xml
+++ b/app/src/main/res/values-nb/about.xml
@@ -8,7 +8,7 @@
         <b>Credits</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
-        rehrar, EarlOfEgo og andre.
+        rehrar, EarlOfEgo, ErCiccione og andre.
         <br/><br/>
         <a href="https://monerujo.io/">monerujo.io</a>
         ]]></string>
