--- a/app/src/main/res/layout/layout_fabmenu.xml
+++ b/app/src/main/res/layout/layout_fabmenu.xml
@@ -278,7 +278,7 @@
             android:layout_gravity="bottom|end"
             android:backgroundTint="@android:color/transparent"
             android:backgroundTintMode="src_in"
-            android:contentDescription="@string/fab_create_new"
+            android:contentDescription="@string/fab_create_or_restore"
             android:src="@drawable/ic_add"
             app:borderWidth="0dp"
             app:elevation="0dp"
