Update French translations
and fix a few typos in the process.

--- a/app/src/main/res/values-fr/about.xml
+++ b/app/src/main/res/values-fr/about.xml
@@ -23,7 +23,7 @@
         d’informations en accord avec cette politique.
         </p>
         <h2>Données Collectées</h2>
-        <p>Une donnée personnelle est tout type de donnée qui est succeptible
+        <p>Une donnée personnelle est tout type de donnée qui est susceptible
         d’identifier un individu.
         </p>
         <p>Les clefs et adresses publiques Monero collectées sont traitées localement par
@@ -41,7 +41,7 @@
         montant. Votre IP serait également collectable.</p>
         <h2>Permissions de l’application</h2>
         <ul>
-        <li>INTERNET : Connection au réseau Monero via le démon d’un nœud Monero</li>
+        <li>INTERNET : Connexion au réseau Monero via le démon d’un nœud Monero</li>
         <li>READ_EXTERNAL_STORAGE : Lire les fichiers de portefeuille stockés sur l’appareil</li>
         <li>WRITE_EXTERNAL_STORAGE : Écrire les fichiers de portefeuille stockés sur l’appareil</li>
         <li>WAKE_LOCK : Garder l’appareil actif pendant la synchronisation</li>
@@ -53,8 +53,8 @@
         politique de confidentialité dans l’application et sur le site web (www.monerujo.io)
         Il vous est conseillé de contrôler cette Politique de Confidentialité périodiquement
         pour tout changement.
-        <p>Cette Politique de Confidentialité é été mise à jour pour la dernière fois : le
-        10 Novembre 2017.
+        <p>Cette Politique de Confidentialité a été mise à jour pour la dernière fois : le
+        10 novembre 2017.
         </p>
         <h2>Nous contacter</h2>
         <p>Si vous avez des questions à propos de notre politique de confidentialité,
